// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin_console/team_channel_settings/group/GroupList should match snapshot with members 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MemberListGroup"
      >
        <div
          class="DataGrid"
        >
          <div
            class="DataGrid_search"
          >
            <div
              class="DataGrid_searchBar"
            >
              <span
                aria-hidden="true"
                class="DataGrid_searchIcon"
              >
                <i
                  class="fa fa-search"
                  title="Search Icon"
                />
              </span>
              <input
                data-testid="searchInput"
                placeholder="Search"
                type="text"
                value=""
              />
              <i
                class="DataGrid_clearButton fa fa-times-circle hidden"
                data-testid="clear-search"
              />
            </div>
          </div>
          <div
            class="DataGrid_header"
          />
          <div
            class="DataGrid_rows"
          >
            <div
              class="DataGrid_loading"
            >
              <span
                class="LoadingSpinner"
                id="loadingSpinner"
              >
                <span
                  class="fa fa-spinner fa-fw fa-pulse spinner"
                  title="Loading Icon"
                />
              </span>
              Loading
            </div>
          </div>
          <div
            class="DataGrid_footer"
          >
            <div
              class="DataGrid_cell"
            >
              1 - 10 of 15
              <button
                class="btn btn-link prev disabled"
                disabled=""
                type="button"
              >
                <i
                  class="fa fa-1x fa-angle-left"
                  title="Previous Icon"
                />
              </button>
              <button
                class="btn btn-link next "
                type="button"
              >
                <i
                  class="fa fa-1x fa-angle-right"
                  title="Next Icon"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MemberListGroup"
    >
      <div
        class="DataGrid"
      >
        <div
          class="DataGrid_search"
        >
          <div
            class="DataGrid_searchBar"
          >
            <span
              aria-hidden="true"
              class="DataGrid_searchIcon"
            >
              <i
                class="fa fa-search"
                title="Search Icon"
              />
            </span>
            <input
              data-testid="searchInput"
              placeholder="Search"
              type="text"
              value=""
            />
            <i
              class="DataGrid_clearButton fa fa-times-circle hidden"
              data-testid="clear-search"
            />
          </div>
        </div>
        <div
          class="DataGrid_header"
        />
        <div
          class="DataGrid_rows"
        >
          <div
            class="DataGrid_loading"
          >
            <span
              class="LoadingSpinner"
              id="loadingSpinner"
            >
              <span
                class="fa fa-spinner fa-fw fa-pulse spinner"
                title="Loading Icon"
              />
            </span>
            Loading
          </div>
        </div>
        <div
          class="DataGrid_footer"
        >
          <div
            class="DataGrid_cell"
          >
            1 - 10 of 15
            <button
              class="btn btn-link prev disabled"
              disabled=""
              type="button"
            >
              <i
                class="fa fa-1x fa-angle-left"
                title="Previous Icon"
              />
            </button>
            <button
              class="btn btn-link next "
              type="button"
            >
              <i
                class="fa fa-1x fa-angle-right"
                title="Next Icon"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`admin_console/team_channel_settings/group/GroupList should match snapshot with no members 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MemberListGroup"
      >
        <div
          class="DataGrid"
        >
          <div
            class="DataGrid_search"
          >
            <div
              class="DataGrid_searchBar"
            >
              <span
                aria-hidden="true"
                class="DataGrid_searchIcon"
              >
                <i
                  class="fa fa-search"
                  title="Search Icon"
                />
              </span>
              <input
                data-testid="searchInput"
                placeholder="Search"
                type="text"
                value=""
              />
              <i
                class="DataGrid_clearButton fa fa-times-circle hidden"
                data-testid="clear-search"
              />
            </div>
          </div>
          <div
            class="DataGrid_header"
          />
          <div
            class="DataGrid_rows"
          >
            <div
              class="DataGrid_loading"
            >
              <span
                class="LoadingSpinner"
                id="loadingSpinner"
              >
                <span
                  class="fa fa-spinner fa-fw fa-pulse spinner"
                  title="Loading Icon"
                />
              </span>
              Loading
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MemberListGroup"
    >
      <div
        class="DataGrid"
      >
        <div
          class="DataGrid_search"
        >
          <div
            class="DataGrid_searchBar"
          >
            <span
              aria-hidden="true"
              class="DataGrid_searchIcon"
            >
              <i
                class="fa fa-search"
                title="Search Icon"
              />
            </span>
            <input
              data-testid="searchInput"
              placeholder="Search"
              type="text"
              value=""
            />
            <i
              class="DataGrid_clearButton fa fa-times-circle hidden"
              data-testid="clear-search"
            />
          </div>
        </div>
        <div
          class="DataGrid_header"
        />
        <div
          class="DataGrid_rows"
        >
          <div
            class="DataGrid_loading"
          >
            <span
              class="LoadingSpinner"
              id="loadingSpinner"
            >
              <span
                class="fa fa-spinner fa-fw fa-pulse spinner"
                title="Loading Icon"
              />
            </span>
            Loading
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
